--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
             <a href="index.html">Home</a>
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
+            <a href="index.html#pakiets">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
