--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,14 +23,12 @@
     <nav class="nav dark-shadow">
     <div class="wrapper">
 
-        <div class="nav__box">
-            <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
-            <div class="nav__box-call">
-                <p class="nav__box-call-number show-number underline">662 520 511</p>
-            </div>
-
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="../dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
+            </a>
         </div>
 
         <button class="hamburger hamburger--spring" type="button" aria-label="Hamburger Menu">
@@ -40,19 +38,21 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="index.html">Home</a>
             <a href="index.html#services">Usługi</a>
+            <a href="index.html#pakiets">Pakiety</a>
             <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
+            <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="index.html" class="link-animation">Home</a>
             <a href="index.html#services" class="link-animation">Usługi</a>
+            <a href="index.html#pakiets" class="link-animation">Pakiety</a>
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../pakiets.html" class="link-animation">Pakiety</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
+
+
         </div>
 
     </div>
@@ -137,7 +137,7 @@
             <a href="index.html">Home</a>
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
+            <a href="index.html#pakiets">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
