--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
         <nav class="nav dark-shadow">
     <div class="wrapper">
 
-        <div class="nav__box">
-            <i class="fa-solid fa-phone-volume nav__box-icon"></i>
 
 
-            <div class="nav__box-call">
-                <p class="nav__box-call-number show-number underline">662 520 511</p>
-            </div>
-
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="../dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
+            </a>
         </div>
 
         <button class="hamburger hamburger--spring" type="button" aria-label="Hamburger Menu">
@@ -41,19 +39,21 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="index.html">Home</a>
             <a href="index.html#services">Usługi</a>
+            <a href="index.html#pakiets">Pakiety</a>
             <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
+            <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="index.html" class="link-animation">Home</a>
             <a href="index.html#services" class="link-animation">Usługi</a>
+            <a href="index.html#pakiets" class="link-animation">Pakiety</a>
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="../pakiets.html" class="link-animation">Pakiety</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
+            <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
+
+
         </div>
 
     </div>
@@ -77,12 +77,12 @@
 
                 <a href="../insideCleaning.html" class="services__box">
 
-          
+
 
 
                     <h3 class="services__box-heading">Czyszczenie<span
                             class="services__box-heading services__box-heading--highlighted"> wnętrza</span>
-samochodu
+                        samochodu
                     </h3>
 
                     <div class="services__box-check">
@@ -94,7 +94,7 @@ samochodu
 
                 <a href="../outsideCleaning.html" class="services__box services__box--outside-img">
 
-           
+
 
                     <h3 class="services__box-heading services__box-heading--right">Czyszczenie <span
                             class="services__box-heading services__box-heading--highlighted">zewnętrza</span>
@@ -107,6 +107,82 @@ samochodu
                     </div>
                 </a>
             </div>
+        </section>
+
+        <section class="pakiets section" id="pakiets">
+                <h2 class="section-heading">Pakiety</h2>
+                <div class="single-pakiet">
+                    <button class="switch">wnętrze</button>
+                    <div class="card full-pakiet-card car-paint active">
+                        <div class="card__box">
+                            <p class="card__box-title">Zabezpieczene Lakieru</p>
+                            <div class="card__box-info">
+                                <p class="card__box-info-text">Pakiet zawiera: zabezpieczenie lakieru 1/5</p>
+                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card full-pakiet-card car-rims">
+                        <div class="card__box">
+                            <p class="card__box-title">Czyszczenie felg</p>
+                            <div class="card__box-info">
+                                <p class="card__box-info-text">Pakiet zawiera: czyszczenie felg 2/5</p>
+                                <a href="../outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card full-pakiet-card upholstery-washing">
+                        <div class="card__box">
+                            <p class="card__box-title">Pranie tapicerki</p>
+                            <div class="card__box-info">
+                                <p class="card__box-info-text">Pakiet zawiera: pranie tapicerki <span
+                                        class="inside-number1">3/5</span></p>
+                                <a href="../insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
+                                    się więcej</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card full-pakiet-card car-cockpit">
+                        <div class="card__box">
+                            <p class="card__box-title">Czyszczenie kokpitu</p>
+                            <div class="card__box-info">
+                                <p class="card__box-info-text">Pakiet zawiera: czyszczenie kokpitu <span
+                                        class="inside-number2">4/5</span></p>
+                                <a href="../insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card full-pakiet-card car-headliner">
+                        <div class="card__box">
+                            <p class="card__box-title">Czyszczenie podsufikti</p>
+                            <div class="card__box-info">
+                                <p class="card__box-info-text">Pakiet zawiera: bonetowanie podsufikti <span
+                                        class="inside-number3">5/5</span> </p>
+                                <a href="../insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
+                                    więcej</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="price">
+                        <p class="price__box"><span class="price__box-discount">450-550zł</span> <span
+                                class="price__box-rebate">Rabat
+                                27-34%</span></p>
+                        <p class="price__total">400-500zł</p>
+                    </div>
+
+                </div>
+
+                <p class="info-pakiets">Skorzystaj z wybranego pakietu lub sprawdź nasze <a href="#services"
+                    class="info-pakiets-link">pojedyncze
+                    opcje</a></p>
         </section>
 
         <section class="section" id="how-to-order">
@@ -145,18 +221,22 @@ samochodu
                         alt="Lśniąca maska marki samochodu bmw po dogłębnym oczyszczeniu lakieru">
                     <img data-src="../dist/img/1 (6) repaired.jpg" class="realization__box-img realization__box-img--9"
                         alt="Pranie tapicerki samochodowej odkurzaczem piorącym marki karcher">
-                    <img data-src="../dist/img/mobileDblSeats.jpg"
-                        class="realization__box-img realization__box-img--1 mobile"
-                        alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
-                    <img data-src="../dist/img/seats-dbl.jpg"
-                        class="realization__box-img realization__box-img--1 desktop"
-                        alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
-                    <img data-src="../dist/img/mobileSteeringWheel.jpg"
-                        class="realization__box-img realization__box-img--4 mobile"
-                        alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
-                    <img data-src="../dist/img/dblSterringJpg.jpg"
-                        class="realization__box-img realization__box-img--4 desktop"
-                        alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                    <div class="realization__box-img realization__box-img--1">
+                        <img data-src="../dist/img/mobileDblSeats.jpg"
+                            class="realization__box-img realization__box-img--1 mobile"
+                            alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
+                        <img data-src="../dist/img/seats-dbl.jpg"
+                            class="realization__box-img realization__box-img--1 desktop"
+                            alt="Porównanie wnętrza pojazdu przed i po dogłębnym oczyszczeniu">
+                    </div>
+                    <div class="realization__box-img realization__box-img--4">
+                        <img data-src="../dist/img/mobileSteeringWheel.jpg"
+                            class="realization__box-img realization__box-img--4 mobile"
+                            alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                        <img data-src="../dist/img/dblSterringJpg.jpg"
+                            class="realization__box-img realization__box-img--4 desktop"
+                            alt="Zdjęcia miejsca kierowcy przed i po czyszczeniu wnętrza w samochodzie">
+                    </div>
                     <img data-src="../dist/img/1 (15) repaired.jpg"
                         class="realization__box-img realization__box-img--10"
                         alt="Element kabiny samochodowej w pianie podczas usuwania brudu">
@@ -181,7 +261,7 @@ samochodu
             <a href="index.html">Home</a>
             <a href="index.html#services">Usługi</a>
             <a href="index.html#how-to-order">Jak zamówić</a>
-            <a href="../pakiets.html">Pakiety</a>
+            <a href="index.html#pakiets">Pakiety</a>
             <a href="../contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
