--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <nav class="nav dark-shadow">
+        <nav class="nav">
     <div class="wrapper">
 
 
