finally finished project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Detailing Konin - pranie tapicerki, usługi auto detailingowe</title>
     <meta name="description"
         content="Czy Twój pojazd wymaga odświeżenia? Bez względu na to czy to pranie tapicerki bądź polerowanie lakieru, mam rozwiązanie, które spełni Twoje oczekiwania">
-    <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bc047103c6.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <nav class="nav">
+        <nav class="nav dark-shadow">
     <div class="wrapper">
 
 
@@ -52,8 +52,6 @@
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
-
-
         </div>
 
     </div>
@@ -82,7 +80,7 @@
 
                     <h3 class="services__box-heading">Czyszczenie<span
                             class="services__box-heading services__box-heading--highlighted"> wnętrza</span>
-                        samochodu
+samochodu
                     </h3>
 
                     <div class="services__box-check">
@@ -172,10 +170,10 @@
                     </div>
 
                     <div class="price">
-                        <p class="price__box"><span class="price__box-discount">450-550zł</span> <span
+                        <p class="price__box"><span class="price__box-discount">375-600zł</span><span
                                 class="price__box-rebate">Rabat
-                                27-34%</span></p>
-                        <p class="price__total">400-500zł</p>
+                                17-20%</span></p>
+                        <p class="price__total">300-500zł</p>
                     </div>
 
                 </div>
@@ -265,8 +263,9 @@
             <a href="../contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
+        <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
-            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
