--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Detailing Konin - formularz kontaktowy</title>
     <meta name="description" content="Masz jakieś pytania lub chciałbyś sie umówić na wizytę? Pisz smiało i skontaktuj się ze mną za pomocą formularza kontaktowego">
 
-    <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bc047103c6.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
@@ -51,8 +51,6 @@
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
-
-
         </div>
 
     </div>
@@ -63,7 +61,7 @@
             <h2 class="section-heading">Skontaktuj się</h2>
             <div class="wrapper">
                 <div class="form-container">
-                    <form action="../mail.php" method="post" class="form">
+                    <form action="https://formsubmit.io/send/detailingkonin@gmail.com" method="POST" class="form">
                         <input type="text" class="form__input error-item" id="username" name="name"
                             placeholder="Imie i nazwisko">
                         <input type="tel" class="form__input error-item" id="number" name="tel"
@@ -78,12 +76,11 @@
                             </label>
                         </div>
 
-
-                        <button class="form__btn">Wyślij</button>
+                        <input name="_formsubmit_id" type="text" style="display:none">
+                        <button type="submit" class="form__btn">wyślij</button>
                     </form>
-                    <p class="msg-status">123</p>
                 </div>
-
+ 
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2442.966947630051!2d18.268466000000004!3d52.243984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNTLCsDE0JzM4LjMiTiAxOMKwMTYnMDYuNSJF!5e0!3m2!1spl!2spl!4v1689743401520!5m2!1spl!2spl"
                     allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Lokalizacja na google maps Gajowa 7a, 62-510 Konin"></iframe>
@@ -101,8 +98,9 @@
             <a href="../contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
+        <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
-            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
