--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -7,7 +7,7 @@
     <title>Detailing Konin - polerowanie lakieru, czyszczenie felg</title>
     <meta name="description"
         content="Przywróć blask swojemu samochodowi! Wykorzystuję specjalistyczne techniki, by usunąć zarysowania, wypolerować lakier i chronić go przed dalszym brudem">
-    <script src="https://kit.fontawesome.com/498d7c2198.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bc047103c6.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;600;700&family=Lora:wght@700&display=swap" rel="stylesheet">
@@ -50,8 +50,6 @@
             <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
             <a href="../contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
-
-
         </div>
 
     </div>
@@ -111,8 +109,9 @@
             <a href="../contact.html">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
+        <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
-            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="../contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
