changed icon on minus

--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -72,7 +72,7 @@
                             <button aria-label="Rozwiń menu tekstowe"
                                 class="both-cleaning__box-offer-btn  outside-cleaning__box-offer-btn">
 
-                                <i class="both-cleaning-btn-icon fa-solid fa-plus"></i>
+                                <i class="both-cleaning-btn-icon fa-solid fa-minus"></i>
 
                             </button>
                         </div>
