--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
         <div class="nav__logo">
-            <a href="index.html">
+            <a href="https://detailingkonin.pl/">
                 <img src="dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
             </a>
         </div>
@@ -39,18 +39,18 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="index.html#services">Usługi</a>
-            <a href="index.html#pakiets">Pakiety</a>
-            <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="contact.html">Kontakt</a>
+            <a href="/#services">Usługi</a>
+            <a href="/#pakiets">Pakiety</a>
+            <a href="/#how-to-order">Jak Zamówić</a>
+            <a href="contact">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="index.html#services" class="link-animation">Usługi</a>
-            <a href="index.html#pakiets" class="link-animation">Pakiety</a>
-            <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="contact.html" class="link-animation">Kontakt</a>
+            <a href="/#services" class="link-animation">Usługi</a>
+            <a href="/#pakiets" class="link-animation">Pakiety</a>
+            <a href="/#how-to-order" class="link-animation">Jak Zamówić</a>
+            <a href="contact" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -73,7 +73,7 @@
             <h2 class="section-heading">Usługi</h2>
             <div class="services">
 
-                <a href="insideCleaning.html" class="services__box">
+                <a href="insideCleaning" class="services__box">
 
 
 
@@ -90,7 +90,7 @@ samochodu
                 </a>
 
 
-                <a href="outsideCleaning.html" class="services__box services__box--outside-img">
+                <a href="outsideCleaning" class="services__box services__box--outside-img">
 
 
 
@@ -116,7 +116,7 @@ samochodu
                             <p class="card__box-title">Zabezpieczene Lakieru</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: zabezpieczenie lakieru 1/5</p>
-                                <a href="outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                <a href="outsideCleaning#about-pakiet" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -127,7 +127,7 @@ samochodu
                             <p class="card__box-title">Czyszczenie felg</p>
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie felg 2/5</p>
-                                <a href="outsideCleaning.html#about-pakiet" class="card__box-info-link">Dowiedz się
+                                <a href="outsideCleaning#about-pakiet" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -139,7 +139,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: pranie tapicerki <span
                                         class="inside-number1">3/5</span></p>
-                                <a href="insideCleaning.html#about-upholstery" class="card__box-info-link">Dowiedz
+                                <a href="insideCleaning#about-upholstery" class="card__box-info-link">Dowiedz
                                     się więcej</a>
                             </div>
                         </div>
@@ -151,7 +151,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: czyszczenie kokpitu <span
                                         class="inside-number2">4/5</span></p>
-                                <a href="insideCleaning.html#about-cockpit" class="card__box-info-link">Dowiedz się
+                                <a href="insideCleaning#about-cockpit" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -163,7 +163,7 @@ samochodu
                             <div class="card__box-info">
                                 <p class="card__box-info-text">Pakiet zawiera: bonetowanie podsufikti <span
                                         class="inside-number3">5/5</span> </p>
-                                <a href="insideCleaning.html#about-headliner" class="card__box-info-link">Dowiedz się
+                                <a href="insideCleaning#about-headliner" class="card__box-info-link">Dowiedz się
                                     więcej</a>
                             </div>
                         </div>
@@ -256,17 +256,17 @@ samochodu
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="index.html">Home</a>
-            <a href="index.html#services">Usługi</a>
-            <a href="index.html#how-to-order">Jak zamówić</a>
-            <a href="index.html#pakiets">Pakiety</a>
-            <a href="contact.html">Kontakt</a>
+            <a href="https://detailingkonin.pl/">Home</a>
+            <a href="/#services">Usługi</a>
+            <a href="/#how-to-order">Jak zamówić</a>
+            <a href="/#pakiets">Pakiety</a>
+            <a href="contact">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
