--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,7 +26,7 @@
 
 
         <div class="nav__logo">
-            <a href="index.html">
+            <a href="https://detailingkonin.pl/">
                 <img src="dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
             </a>
         </div>
@@ -38,18 +38,18 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="index.html#services">Usługi</a>
-            <a href="index.html#pakiets">Pakiety</a>
-            <a href="index.html#how-to-order">Jak Zamówić</a>
-            <a href="contact.html">Kontakt</a>
+            <a href="/#services">Usługi</a>
+            <a href="/#pakiets">Pakiety</a>
+            <a href="/#how-to-order">Jak Zamówić</a>
+            <a href="contact">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="index.html#services" class="link-animation">Usługi</a>
-            <a href="index.html#pakiets" class="link-animation">Pakiety</a>
-            <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="contact.html" class="link-animation">Kontakt</a>
+            <a href="/#services" class="link-animation">Usługi</a>
+            <a href="/#pakiets" class="link-animation">Pakiety</a>
+            <a href="/#how-to-order" class="link-animation">Jak Zamówić</a>
+            <a href="contact" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -132,17 +132,17 @@
     <footer class="footer">
     <div class="wrapper">
         <div class="footer__box-links">
-            <a href="index.html">Home</a>
-            <a href="index.html#services">Usługi</a>
-            <a href="index.html#how-to-order">Jak zamówić</a>
-            <a href="index.html#pakiets">Pakiety</a>
-            <a href="contact.html">Kontakt</a>
+            <a href="https://detailingkonin.pl/">Home</a>
+            <a href="/#services">Usługi</a>
+            <a href="/#how-to-order">Jak zamówić</a>
+            <a href="/#pakiets">Pakiety</a>
+            <a href="contact">Kontakt</a>
         </div>
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
