paths in header added /

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <p class="header__text">Witaj w naszym wyjątkowym świecie auto detailingu! Jeśli szukasz doskonałej
                 pielęgnacji dla Twojego samochodu, jesteś we właściwym miejscu. Daj swojemu pojazdowi wyjątkową troskę,
                 odświeżenie i ochronę, które podkreślą jego piękno i spraw, by Twój samochód błyszczał na drodze.</p>
-            <a href="#services" class="header__btn">Sprawdź ofertę</a>
-            <a href="#services" aria-label="Zjedź niżej by sprawdzić ofertę"><i
+            <a href="/#services" class="header__btn">Sprawdź ofertę</a>
+            <a href="/#services" aria-label="Zjedź niżej by sprawdzić ofertę"><i
                     class="fa-solid fa-angles-down header__scroll-down"></i></a>
         </div>
 
