--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ samochodu
 
                 </div>
 
-                <p class="info-pakiets">Skorzystaj z wybranego pakietu lub sprawdź nasze <a href="#services"
+                <p class="info-pakiets">Skorzystaj z wybranego pakietu lub sprawdź nasze <a href="/#services"
                     class="info-pakiets-link">pojedyncze
                     opcje</a></p>
         </section>
