--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
         <div class="nav__logo">
-            <a href="https://detailingkonin.pl/">
+            <a href="#">
                 <img src="dist/img/Brand Name Logo - Original - resolution.png" alt="Logo Detailing konin">
             </a>
         </div>
@@ -265,7 +265,7 @@ samochodu
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
-            <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="contact" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
