--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -164,7 +164,7 @@
 
 
 
-                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="/#pakiets"
+                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="index.html/#pakiets"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
             </div>
@@ -184,7 +184,7 @@
         <p class="footer__domain-name">detailingkonin.pl</p>
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
-            <a href="https://www.instagram.com/kupskibartek/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/_k_u_p_s_i_k_/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
             <a href="contact" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
