--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -164,7 +164,7 @@
 
 
 
-                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="/#pakiets"
+                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a onclick="window.location.href = 'https://detailingkonin.pl/#pakiets';" href="/#pakiets"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
             </div>
