--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -164,9 +164,10 @@
 
 
 
-                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a onclick="window.location.href = 'https://detailingkonin.pl/#pakiets';" href="/#pakiets"
+                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a onclick="window.location.href = 'https://detailingkonin.pl/#pakiets';" href=""
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
+                        <p onclick="window.location.href = 'https://detailingkonin.pl/#pakiets';">testestest</p>
             </div>
         </section>
     </main>
