--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="section-heading">Usługi</h2>
             <div class="services">
 
-                <a href="insideCleaning" class="services__box">
+                <a href="insideCleaning#" class="services__box">
 
 
 
