--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="section-heading">Usługi</h2>
             <div class="services">
 
-                <a href="insideCleaning#" class="services__box">
+                <a href="insideCleaning.html" class="services__box">
 
 
 
@@ -90,7 +90,7 @@ samochodu
                 </a>
 
 
-                <a href="outsideCleaning" class="services__box services__box--outside-img">
+                <a href="https://detailingkonin.pl/outsideCleaning" class="services__box services__box--outside-img">
 
 
 
