--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ samochodu
                 </a>
 
 
-                <a href="https://detailingkonin.pl/outsideCleaning" class="services__box services__box--outside-img">
+                <a href="outsideCleaning.html" class="services__box services__box--outside-img">
 
 
 
