--- a/insideCleaning.html
+++ b/insideCleaning.html
@@ -164,10 +164,9 @@
 
 
 
-                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a onclick="window.location.href = 'https://detailingkonin.pl/#pakiets';" href=""
+                <p class="info-pakiets">Skorzystaj z naszysz opcji lub sprawdź <a href="https://detailingkonin.pl/#pakiets"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
-                        <p onclick="window.location.href = 'https://detailingkonin.pl/#pakiets';">testestest</p>
             </div>
         </section>
     </main>
