--- a/outsideCleaning.html
+++ b/outsideCleaning.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <p class="info-pakiets">Skorzystaj z naszej opcji lub sprawdź <a href="detailingkonin.pl/#pakiets"
+                <p class="info-pakiets">Skorzystaj z naszej opcji lub sprawdź <a href="index.html#pakiets"
                         class="info-pakiets-link">promocyjne
                         pakiety</a></p>
             </div>
