--- a/contact.html
+++ b/contact.html
@@ -38,18 +38,18 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="/#services">Usługi</a>
-            <a href="/#pakiets">Pakiety</a>
-            <a href="/#how-to-order">Jak Zamówić</a>
-            <a href="contact">Kontakt</a>
+            <a href="index.html#services">Usługi</a>
+            <a href="index.html#pakiets">Pakiety</a>
+            <a href="index.html#how-to-order">Jak Zamówić</a>
+            <a href="contact.html">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="/#services" class="link-animation">Usługi</a>
-            <a href="/#pakiets" class="link-animation">Pakiety</a>
-            <a href="/#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="contact" class="link-animation">Kontakt</a>
+            <a href="index.html#services" class="link-animation">Usługi</a>
+            <a href="index.html#pakiets" class="link-animation">Pakiety</a>
+            <a href="index.html#how-to-order" class="link-animation">Jak Zamówić</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
@@ -101,7 +101,7 @@
         <p class="footer-copyright">&copy; <span class="footer-copyright-year"></span> Wszelkie prawa zastrzeżone</p>
         <div class="footer__box-social">
             <a href="https://www.instagram.com/_k_u_p_s_i_k_/" aria-label="Profil na Instagramie"><i class="fa-brands fa-instagram"></i></a>
-            <a href="contact" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
+            <a href="contact.html" aria-label="Formularz kontaktowy"><i class="fa-solid fa-envelope"></i></a>
             <a href="tel:662-520-511" aria-label="Zadzwoń pod numer 662-520-511"><i class="fa-solid fa-phone"></i></a>
         </div>
     </div>
