--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
         </button>
 
         <div class="nav__mobile">
-            <a href="/#services">Usługi</a>
-            <a href="/#pakiets">Pakiety</a>
-            <a href="/#how-to-order">Jak Zamówić</a>
-            <a href="contact">Kontakt</a>
+            <a href="#services">Usługi</a>
+            <a href="#pakiets">Pakiety</a>
+            <a href="#how-to-order">Jak Zamówić</a>
+            <a href="contact.html">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
         <div class="nav__desktop">
-            <a href="/#services" class="link-animation">Usługi</a>
-            <a href="/#pakiets" class="link-animation">Pakiety</a>
-            <a href="/#how-to-order" class="link-animation">Jak Zamówić</a>
-            <a href="contact" class="link-animation">Kontakt</a>
+            <a href="#services" class="link-animation">Usługi</a>
+            <a href="#pakiets" class="link-animation">Pakiety</a>
+            <a href="#how-to-order" class="link-animation">Jak Zamówić</a>
+            <a href="contact.html" class="link-animation">Kontakt</a>
             <a href="tel:662-520-511"><i class="fa-solid fa-mobile-screen"></i> 662-520-511</a>
         </div>
 
