changed place  anchor links

--- a/public/insideCleaning.html
+++ b/public/insideCleaning.html
@@ -59,7 +59,7 @@
         <section>
             <div class="wrapper">
                 <div class="inside-cleaning">
-                    <div class="inside-cleaning__box">
+                    <div class="inside-cleaning__box" id="about-upholstery">
                         <div class="inside-cleaning__box-best">Najpopularniejsze</div>
                         <img src="dist/img/pranieTapicerkiStrona.jpg"
                             alt="Pranie tapicerki samochodowej odkurzaczem piarącym" class="inside-cleaning__box-img">
@@ -82,8 +82,7 @@
                         </div>
 
 
-                        <div class="both-cleaning__accordion-text inside-cleaning__accordion-text"
-                            id="about-upholstery">
+                        <div class="both-cleaning__accordion-text inside-cleaning__accordion-text">
                             <p>
                                 To proces polegający na czyszczeniu i odświeżaniu tkaninowych lub skórzanych
                                 powierzchni
@@ -131,7 +130,7 @@
 
                         </div>
                     </div>
-                    <div class="inside-cleaning__box" id="about-headliner">
+                    <div class="inside-cleaning__box" >
                         <img src="dist/img/car-headliner.jpg" alt="Czysta podsufitka w samochodzie"
                             class="inside-cleaning__box-img">
 
@@ -145,7 +144,7 @@
 
 
 
-                        <div class="both-cleaning__accordion-text inside-cleaning__accordion-text">
+                        <div class="both-cleaning__accordion-text inside-cleaning__accordion-text" id="about-headliner">
                             <p>
                                 To proces odświeżania i poprawy wyglądu wnętrza samochodu poprzez oczyszczenie i
                                 przywrócenie
